.metadata/.plugins/org.eclipse.cdt.ui/SerialMonitor.build.log
11:45:11 **** Incremental Build of configuration Debug for project SerialMonitor ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32L4 -DSTM32 -DSTM32L476RGTx -DSTM32L476xx -c -I../Inc -I/home/daniel/Documents/STM32BareaMetalCourse/chip_headers/CMSIS/Include -I/home/daniel/Documents/STM32BareaMetalCourse/chip_headers/CMSIS/Device/ST/STM32L4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:48:8: error: assignment to expression with array type
   48 |   text = uart2_read(USART2);
      |        ^
../Src/main.c:49:11: warning: comparison between pointer and integer
   49 |   if(text == 'Y')
      |           ^~
make: *** [Src/subdir.mk:28: Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:45:13 Build Failed. 2 errors, 1 warnings. (took 2s.52ms)

